--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,38 @@
-/* You can add global styles to this file, and also import other style files */
+.container {
+  background-color: #C0C0C0;
+  width: 90vw;
+  height: 80vh;
+  margin: auto;
+  border-radius: 10px;
+}
+
+nav {
+  width: 90vw;
+  height: 5vh;
+  text-align: center;
+  margin: auto;
+}
+
+a {
+  color: #0000ff;
+  text-decoration: none;
+}
+
+li {
+  width: 33vw;
+  height: 33vh;
+  background: red;
+  list-style: none;
+  margin: 10%;
+  border-radius: 10px;
+  text-align: center;
+}
+
+ul{
+  display: flex;
+  flex-direction: row;
+}
+
+li a {
+  color: #fff;
+}
