feat: add angular material

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,14 @@
-<div class="container">
-  <div class="card">
-    <ul>
-      <li><a href="#">ЗДОРОВЬЯ</a></li>
-      <li><a href="#">ТРАНСПОРТА</a></li>
-      <li><a href="#">ИМУЩЕСТВА</a></li>
-    </ul>
-  </div>
-</div>
+<app-toolbar></app-toolbar>
+
+<mat-list>
+  <mat-list-item>
+    <mat-icon>accessibility_new</mat-icon>
+    <a href="#">ЗДОРОВЬЯ</a>
+  </mat-list-item>
+  <mat-list-item> <a href="#">ТРАНСПОРТА</a> </mat-list-item>
+  <mat-list-item> <a href="#">ИМУЩЕСТВА</a> </mat-list-item>
+</mat-list>
+
+
+
+
