--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,38 +1,2 @@
-.container {
-  background-color: #C0C0C0;
-  width: 90vw;
-  height: 80vh;
-  margin: auto;
-  border-radius: 10px;
-}
-
-nav {
-  width: 90vw;
-  height: 5vh;
-  text-align: center;
-  margin: auto;
-}
-
-a {
-  color: #0000ff;
-  text-decoration: none;
-}
-
-li {
-  width: 33vw;
-  height: 33vh;
-  background: red;
-  list-style: none;
-  margin: 10%;
-  border-radius: 10px;
-  text-align: center;
-}
-
-ul{
-  display: flex;
-  flex-direction: row;
-}
-
-li a {
-  color: #fff;
-}
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
