--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,1 +1,28 @@
-<p>property works!</p>
+<mat-grid-list cols="2">
+  <mat-grid-tile>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Строения граждан</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518724.svg"
+           alt="Страхование строений граждан">
+      <mat-card-actions>
+        <a href="#">Подробнее</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Жилищное страхование (квартира, имущество, ответственность)</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518754.svg"
+           alt="Комбинированное страхование квартиры">
+      <mat-card-actions>
+        <a href="#">Подробнее</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+</mat-grid-list>
