--- a/src/app/health/health.component.html
+++ b/src/app/health/health.component.html
@@ -1,1 +1,27 @@
-<p>health works!</p>
+<mat-grid-list cols="2">
+  <mat-grid-tile>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Несчастные случаи</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518739.svg"
+           alt="Страхование от несчастных случаев">
+      <mat-card-actions>
+        <a href="#">Подробнее</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Страхование выезжающих зарубеж</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518716.svg" alt="Страхование выезжающих зарубеж">
+      <mat-card-actions>
+        <a href="#">Подробнее</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+</mat-grid-list>
