feat: add green-card

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,10 @@
 <mat-toolbar color="primary" class="navbar">
   <div>Калькулятор страхования</div>
   <div>
-    <a routerLink="">
-      Главная
-    </a>
-    <a routerLink="/health">
-      Здоровья
-    </a>
-    <a routerLink="/transport">
-      Транспорта
-    </a>
-    <a routerLink="/property">
-      Имущества
-    </a>
+    <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Главная</a>
+    <a routerLink="/health" routerLinkActive="active">Здоровья</a>
+    <a routerLink="/transport" routerLinkActive="active">Транспорта</a>
+    <a routerLink="/property" routerLinkActive="active">Имущества</a>
   </div>
 </mat-toolbar>
 <router-outlet></router-outlet>
