--- a/src/app/health/health.component.html
+++ b/src/app/health/health.component.html
@@ -1,6 +1,6 @@
-<mat-grid-list cols="2">
+<mat-grid-list cols="3">
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Несчастные случаи</mat-card-title>
       </mat-card-header>
@@ -13,7 +13,20 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
+      <mat-card-header>
+        <mat-card-title>Страхование семьи</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518709.svg"
+           alt="Страхование семьи">
+      <mat-card-actions>
+        <a href="#">Подробнее</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Страхование выезжающих зарубеж</mat-card-title>
       </mat-card-header>
