--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="3">
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Здоровье</mat-card-title>
       </mat-card-header>
@@ -12,7 +12,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Транспорт</mat-card-title>
       </mat-card-header>
@@ -24,7 +24,7 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Имущество</mat-card-title>
       </mat-card-header>
