--- a/src/app/transport/transport.component.html
+++ b/src/app/transport/transport.component.html
@@ -1,26 +1,39 @@
-<mat-grid-list cols="2">
+<mat-grid-list cols="3">
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Зеленая карта</mat-card-title>
       </mat-card-header>
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518712.svg"
            alt="Страхование Зеленая карта">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a href="green-card">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
+      <mat-card-header>
+        <mat-card-title>Автокаско</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518747.svg"
+           alt="Страхование Автокаско">
+      <mat-card-actions>
+        <a href="casco">Подробнее</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>ОСГО</mat-card-title>
       </mat-card-header>
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518708.svg"
            alt="Обязательное страхование гражданской ответственности">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a href="osgo">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
