--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -1,6 +1,6 @@
-<mat-grid-list cols="2">
+<mat-grid-list cols="3">
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Строения граждан</mat-card-title>
       </mat-card-header>
@@ -13,7 +13,20 @@
   </mat-grid-tile>
 
   <mat-grid-tile>
-    <mat-card class="example-card">
+    <mat-card class="card">
+      <mat-card-header>
+        <mat-card-title>Ответственность перед соседями</mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518730.svg"
+           alt="Страхование ответственности перед соседями">
+      <mat-card-actions>
+        <a href="#">Подробнее</a>
+      </mat-card-actions>
+    </mat-card>
+  </mat-grid-tile>
+
+  <mat-grid-tile>
+    <mat-card class="card">
       <mat-card-header>
         <mat-card-title>Жилищное страхование (квартира, имущество, ответственность)</mat-card-title>
       </mat-card-header>
