--- a/src/app/transport/green-card/green-card.component.scss
+++ b/src/app/transport/green-card/green-card.component.scss
@@ -4,15 +4,15 @@ h1 {
   margin-top: 1rem;
 }
 
-.container {
+form {
   display: flex;
   flex-direction: column;
   margin: 1rem auto;
-  width: 50%;
+  width: 60%;
 }
 
 mat-form-field {
-  margin: 1.5rem;
+  margin: 1rem;
 }
 
 .btn {
@@ -20,3 +20,8 @@ mat-form-field {
   justify-content: center;
 }
 
+p {
+  text-align: center;
+  font-size: 2rem;
+  margin-top: 2rem;
+}
