feat: add apartment

--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -33,7 +33,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518754.svg"
            alt="Комбинированное страхование квартиры">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a href="apartment">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
