--- a/src/app/property/apartment/apartment.component.scss
+++ b/src/app/property/apartment/apartment.component.scss
@@ -4,13 +4,6 @@ h1 {
   margin-top: 1rem;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  margin: 1rem auto;
-  width: 60%;
-}
-
 mat-form-field {
   margin: 1rem;
 }
@@ -29,4 +22,16 @@ p {
 
 small {
   color: #ff0000;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 2rem;
+  width: 60%;
+}
+
+.wrap {
+  display: flex;
+  flex-direction: row;
 }
