feat: add accident

--- a/src/app/health/health.component.html
+++ b/src/app/health/health.component.html
@@ -7,7 +7,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518739.svg"
            alt="Страхование от несчастных случаев">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a routerLink="/health/accident">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -20,7 +20,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518709.svg"
            alt="Страхование семьи">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a routerLink="#">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -32,7 +32,7 @@
       </mat-card-header>
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518716.svg" alt="Страхование выезжающих зарубеж">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a routerLink="#">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
