--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -7,7 +7,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518724.svg"
            alt="Страхование строений граждан">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a routerLink="#">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -20,7 +20,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518730.svg"
            alt="Страхование ответственности перед соседями">
       <mat-card-actions>
-        <a href="#">Подробнее</a>
+        <a routerLink="#">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -33,7 +33,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518754.svg"
            alt="Комбинированное страхование квартиры">
       <mat-card-actions>
-        <a href="apartment">Подробнее</a>
+        <a routerLink="/property/apartment">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
