--- a/src/app/transport/transport.component.html
+++ b/src/app/transport/transport.component.html
@@ -7,7 +7,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518712.svg"
            alt="Страхование Зеленая карта">
       <mat-card-actions>
-        <a href="green-card">Подробнее</a>
+        <a routerLink="/transport/green-card">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -20,7 +20,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518747.svg"
            alt="Страхование Автокаско">
       <mat-card-actions>
-        <a href="casco">Подробнее</a>
+        <a routerLink="/transport/casco">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
@@ -33,9 +33,11 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518708.svg"
            alt="Обязательное страхование гражданской ответственности">
       <mat-card-actions>
-        <a href="osgo">Подробнее</a>
+        <a routerLink="/transport/osgo">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
 
 </mat-grid-list>
+
+
