feat: add building

--- a/src/app/property/property.component.html
+++ b/src/app/property/property.component.html
@@ -20,7 +20,7 @@
       <img mat-card-image src="https://image.flaticon.com/icons/svg/1518/1518730.svg"
            alt="Страхование ответственности перед соседями">
       <mat-card-actions>
-        <a routerLink="property/responsibility">Подробнее</a>
+        <a routerLink="/property/responsibility">Подробнее</a>
       </mat-card-actions>
     </mat-card>
   </mat-grid-tile>
