--- a/src/app/property/building/building.component.html
+++ b/src/app/property/building/building.component.html
@@ -1,1 +1,150 @@
-<p>building works!</p>
+<h1>Страхование строений</h1>
+<div class="container">
+  <form [formGroup]="form" (ngSubmit)="submit()">
+    <div class="wrap">
+      <div class="column">
+        <mat-form-field>
+          <mat-label>Срок страхования</mat-label>
+          <mat-select formControlName="periodControl">
+            <mat-option *ngFor="let period of periods" [value]="period.value">
+              {{period.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('periodControl').hasError('required')">
+            <small>Поле "Срок страхования" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field  *ngIf="form.get('periodControl').value === 9.6 || form.get('periodControl').invalid;else
+        elseNum">
+          <mat-label>Оплата взноса единовременно или в рассрочку</mat-label>
+          <mat-select formControlName="numControl">
+            <mat-option *ngFor="let num of numberOfPayments" [value]="num.value">
+              {{num.viewValue}}
+            </mat-option>
+          </mat-select >
+          <mat-error *ngIf="form.get('numControl').hasError('required')">
+            <small>Поле "Оплата взноса единовременно или в рассрочку" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+        <ng-template #elseNum>
+          <mat-form-field>
+            <mat-label>Оплата взноса единовременно или в рассрочку</mat-label>
+            <mat-select formControlName="numControl">
+              <mat-option [value]="1">
+                Единовременно
+              </mat-option>
+            </mat-select>
+            <mat-error *ngIf="form.get('numControl').hasError('required')">
+              <small>Поле "Оплата взноса единовременно или в рассрочку" не может быть пустым</small>
+            </mat-error>
+          </mat-form-field>
+        </ng-template>
+
+        <mat-form-field>
+          <mat-label>Валюта договора страхования</mat-label>
+          <mat-select formControlName="currencyControl">
+            <mat-option *ngFor="let currency of paymentCurrency" [value]="currency.value">
+              {{currency.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('currencyControl').hasError('required')">
+            <small>Поле "Валюта договора страхования" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Наличие действующих либо одновременно заключаемых c компанией иных договоров добровольного
+            страхования</mat-label>
+          <mat-select formControlName="otherControl">
+            <mat-option *ngFor="let other of otherTreaty" [value]="other.value">
+              {{other.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('otherControl').hasError('required')">
+            <small>Поле "Наличие договоров" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Вы являетесь держателем дисконтных карт наших партнеров?</mat-label>
+          <mat-select formControlName="cardControl">
+            <mat-option *ngFor="let card of discountCard" [value]="card.value">
+              {{card.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('cardControl').hasError('required')">
+            <small>Поле "Дисконтные карты" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+      </div>
+
+      <div class="column">
+        <mat-form-field>
+          <mat-label>Строение приобретено Вами с привлечением кредитных средств или находится в залоге</mat-label>
+          <mat-select formControlName="creditControl">
+            <mat-option *ngFor="let credit of creditFunds" [value]="credit.value">
+              {{credit.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('creditControl').hasError('required')">
+            <small>Поле "Строение приобретено Вами с привлечением кредитных средств" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Строение находится в садоводческом товариществе либо дачном кооперативе</mat-label>
+          <mat-select formControlName="locationControl">
+            <mat-option *ngFor="let loc of location" [value]="loc.value">
+              {{loc.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('locationControl').hasError('required')">
+            <small>Поле "Строение находится в садоводческом товариществе либо дачном кооперативе" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>В жилом доме (квартире в блокированном жилом доме) имеется автоматическая система пожаротушения</mat-label>
+          <mat-select formControlName="alarmControl">
+            <mat-option *ngFor="let alarm of fireAlarm" [value]="alarm.value">
+              {{alarm.viewValue}}
+            </mat-option>
+          </mat-select>
+          <mat-error *ngIf="form.get('alarmControl').hasError('required')">
+            <small>Поле "В жилом доме (квартире в блокированном жилом доме) имеется автоматическая система пожаротушения" не может быть пустым</small>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field>
+          <mat-label>Размер страхового покрытия (страховая сумма)</mat-label>
+          <input matInput value="text" formControlName="amountControl">
+          <mat-error *ngIf="form.get('amountControl').hasError('required')">
+            <small>Поле "Размер страхового покрытия (страховая сумма)" не может быть пустым</small>
+          </mat-error>
+          <mat-error *ngIf="form.get('amountControl').hasError('pattern')">
+            <small>Поле "Размер страхового покрытия (страховая сумма)" должно содержать только цифры</small>
+          </mat-error>
+        </mat-form-field>
+      </div>
+    </div>
+
+    <div class="btn">
+      <button mat-raised-button color="primary" type="submit" [disabled]="form.invalid">Рассчитать</button>
+    </div>
+  </form>
+
+  <small *ngIf="form.invalid">Необходимо заполнить все поля, чтобы произвести расчет</small>
+
+  <div *ngIf="cost">
+    <div *ngIf="cost !== cost / numberCoefficient;else elseBlock">
+      <p>Платеж при заключении договора {{cost / numberCoefficient | currency: 'BYN' :
+        'symbol':'1.0-2'}}</p>
+      <p>Всего по договору страхования {{cost | currency: 'BYN' : 'symbol':'1.0-2'}}</p>
+    </div>
+    <ng-template #elseBlock>
+      <p>Всего по договору страхования {{cost | currency: 'BYN' : 'symbol':'1.0-2'}}</p>
+    </ng-template>
+  </div>
+</div>
+
